--- a/addnew.css
+++ b/addnew.css
@@ -1,98 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: #f9f9f9;
-    color: #333;
-}
-/*nav bar*/
-header {
-    background-color: #4f83ff;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-}
-header section{
-    margin-top: 10px;
-}
-/*add new*/
-
-header  section button {
-    background-color: white;
-    color: #4f83ff;
-    border: none;
-    padding: 0.5rem 1rem;
-    margin: 0 3px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-header section button.active {
-    background-color: #ffda44;
-    color: #333;
-}
-
-main {
-    max-width: 800px;
-    margin: 2rem auto;
-    padding: 2%;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-}
-h2{
-    margin-bottom: 1rem;
-    color: #4f83ff;
-}
-
-
-
-form label {
-    display: block;
-    margin-top: 1rem;
-    margin-bottom: 0.3rem;
-    font-weight: bold;
-}
-
-form input, form select, form textarea {
-    width: 100%;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-form button {
-    margin-top: 1rem;
-    background-color:darkgreen;
-    color: white;
-    border: none;
-    width: 100%;
-    padding: 0.7rem 1.5rem;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-form button:hover {
-    background-color: #3a6cd3;
-}
-@media(max-width: 800px)
-{
-    header section{
-        display:none;
-    }
-}
-@media (max-width: 800px) {
-    form input,
-    form select,
-    form textarea {
-        width: 95%;
-        margin-left: 0 auto;
-        margin-right: 0;
-        display: block;
-    }
-}
+body {
+    background-color: #EFEDE7;
+    color: #556B2F;
+  }
 
